force-app/main/default/objects/Work_Activity_Log__c/Work_Activity_Log__c.object-meta.xml
<CustomObject>
    <label>Work Activity Log(Deprecated)</label>
    <nameField>
        <displayFormat>WAL-{0000}</displayFormat>
        <label>Work Activity Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Activity Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>