force-app/main/default/objects/Work_Activity_Log__c/fields/DurationFormula__c.field-meta.xml
<CustomField>
    <fullName>DurationFormula__c</fullName>
    <formula>IF(ISNULL(Start_Time__c) , null,  IF(ISNULL(End_Time__c) , null,  (End_Time__c  -  Start_Time__c)/1000 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration(sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>