force-app/main/default/objects/Work_Activity_Log__c/fields/Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Work_Day__c</fullName>
    <label>Work Day</label>
    <referenceTo>Work_Day__c</referenceTo>
    <relationshipName>Work_Activity_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>