force-app/main/default/objects/Work_Activity_Log__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>